--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <head>
     <title>UI Designer</title>
     <!-- <link rel="stylesheet" src="home.css"><link> -->
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
